--- a/src/app/pages/digitalizador/digitalizador.component.html
+++ b/src/app/pages/digitalizador/digitalizador.component.html
@@ -223,28 +223,31 @@
 
             <form [formGroup]="formCaratula" class="form busqueda__form mt-3">
               <div class="form__row">
-                <mat-form-field class="w-full">
-                  <mat-label>Impresora</mat-label>
-                  <mat-select class="w-full" formControlName="impresora">
-                    <mat-option class="w-full" *ngFor="let impresora of printers" [value]="impresora.name">{{
-                      impresora.name
-                      }}</mat-option>
-                  </mat-select>
-                </mat-form-field>
+                <div class="form__item">
+                  <mat-form-field class="w-full">
+                    <mat-label>Impresora</mat-label>
+                    <mat-select class="w-full" formControlName="impresora">
+                      <mat-option class="w-full" *ngFor="let impresora of printers" [value]="impresora.name">{{
+                        impresora.name
+                        }}</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>
+
+                <div class="form__item">
+                  <mat-form-field class="w-full">
+                    <mat-label>Fecha expediente</mat-label>
+                    <input matInput [matDatepicker]="picker" formControlName="fecha">
+                    <mat-hint>DD/MM/YYYY</mat-hint>
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                  </mat-form-field>
+                </div>
               </div>
 
               <mat-tab-group (selectedIndexChange)="activeTab = $event">
                 <mat-tab label="Automática">
                   <div class="form__row mt-2">
-                    <div class="form__item">
-                      <mat-form-field class="w-full">
-                        <mat-label>Fecha</mat-label>
-                        <input matInput [matDatepicker]="picker" formControlName="fecha">
-                        <mat-hint>DD/MM/YYYY</mat-hint>
-                        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                      </mat-form-field>
-                    </div>
                     <div class="form__item">
                       <mat-form-field class="w-full">
                         <mat-label>Módulo</mat-label>
@@ -328,7 +331,9 @@
         </div>
       </div>
       <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-        <button (click)="crearCaratula(getSelectedValues(seleccionCaratulas.selectedOptions.selected))" type="button"
+        <button
+          (click)="crearCaratula(getSelectedValues(seleccionCaratulas.selectedOptions.selected), formCaratula.get('fecha')?.value.toISOString().substring(0, 10))"
+          type="button"
           class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm">
           Imprimir
         </button>
@@ -427,8 +432,16 @@
                   <div class="form__row mt-3">
                     <div class="form__item">
                       <mat-form-field class="w-full">
-                        <mat-label>Expresión Regular</mat-label>
+                        <mat-label>Expresión regular CURP</mat-label>
                         <input matInput formControlName="regexCurp" />
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class="form__row">
+                    <div class="form__item">
+                      <mat-form-field class="w-full">
+                        <mat-label>Expresión regular fecha</mat-label>
+                        <input matInput formControlName="regexFecha" />
                       </mat-form-field>
                     </div>
                   </div>
